[gd_scene load_steps=6 format=3 uid="uid://b75p3f2pnagcc"]

[ext_resource type="AudioStream" uid="uid://co2i5cocqm0ia" path="res://assets/music/01 Fjord n Fury Theme 8Bit.wav" id="1_nmrkx"]
[ext_resource type="Script" uid="uid://d1nsrir02ff3u" path="res://ui/MainMenu.gd" id="1_rn8js"]
[ext_resource type="FontFile" uid="uid://c1tep3jkif8g8" path="res://ui/font/PressStart2P-Regular.ttf" id="2_nmrkx"]
[ext_resource type="Texture2D" uid="uid://gacp4vh5bfxb" path="res://features/levels/background.png" id="3_8v85u"]
[ext_resource type="PackedScene" uid="uid://1fvets1arxnj" path="res://ui/components/Button.tscn" id="5_x262b"]

[node name="Node2D" type="Node2D"]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("1_nmrkx")
volume_db = -5.0
autoplay = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("1_rn8js")

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_8v85u")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.0
offset_top = -24.0
offset_right = 54.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nmrkx")
theme_override_font_sizes/font_size = 16
text = "Men√º"
horizontal_alignment = 1

[node name="SP_Button" parent="CanvasLayer/Control/VBoxContainer" instance=ExtResource("5_x262b")]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../Quit_Button")
focus_neighbor_bottom = NodePath("../MP_Button")
focus_next = NodePath("../MP_Button")
focus_previous = NodePath("../Quit_Button")
text = "Singleplayer"

[node name="MP_Button" parent="CanvasLayer/Control/VBoxContainer" instance=ExtResource("5_x262b")]
unique_name_in_owner = true
layout_mode = 2
focus_next = NodePath("../Quit_Button")
focus_previous = NodePath("../SP_Button")
text = "Multiplayer"

[node name="Quit_Button" parent="CanvasLayer/Control/VBoxContainer" instance=ExtResource("5_x262b")]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../MP_Button")
focus_neighbor_bottom = NodePath("../SP_Button")
focus_next = NodePath("../SP_Button")
focus_previous = NodePath("../MP_Button")
text = "Spiel Beenden"

[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/SP_Button" to="CanvasLayer" method="_on_sp_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/MP_Button" to="CanvasLayer" method="_on_mp_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/Quit_Button" to="CanvasLayer" method="_on_quit_button_pressed"]
